# pimo

./: README.md  pyproject.toml
.github/workflows/: test.yml
pimo/: labor_market.py  main.py  visualize.py
tests/: test_labor_market.py  test_visualize.py
