[tool.poetry]
name = "pimo"
version = "0.1.0"
description = "An implementation of a Matching Model"
authors = ["21pili <90769845+21pili@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pytest = "^8.2.2"


plotly = "^5.22.0"
[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pimo = "pimo.main:main"